major site revamp: Center elements, change about image, fix alignment of insta embed

--- a/style.css
+++ b/style.css
@@ -206,6 +206,29 @@ main {
     color: #666;
 }
 
+#about-intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+@media screen and (min-width:701px) {
+    #big-thuc {
+        max-width: 55%;
+        display: block;
+        border: 1px solid black;
+    }
+}
+@media screen and (max-width: 700px) {
+    #big-thuc {
+        max-width: 100%;
+        display: block;
+        border: 1px solid black;
+    }
+}
+
 /* Team Section */
 .team-grid {
     display: grid;
@@ -244,6 +267,13 @@ main {
 
 .team-member p {
     color: #666;
+}
+
+.insta-wrapper {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 /* Footer */
